--- a/Project/src/main/webapp/admin_layout/css/style.css
+++ b/Project/src/main/webapp/admin_layout/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 *,
 *::before,
 *::after {
@@ -21,19 +20,162 @@ a:active,
 a:visited {
   color: black;
   text-decoration: none;
+  cursor: pointer;
+}
+
+/* util */
+.fontsize_zero{
+  font-size: 0;   /*inline 요소간에 빈공간 제거*/
+}
+
+.fontweight_600{
+  font-weight: 600;
+}
+
+.menu_fixed{
+  position: fixed;
+  top: 0;
+  width: 100%;
+  border-bottom: 1px solid #ffcd32;
+
+}
+
+#container {
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 0 60px;
 }
 
 /* header */
-
-/* product list */
-
-#main_layout {
-  width: 1140px;
-  margin: 0 auto;
-  font-size: 0;      /*inline 요소간에 빈공간 제거*/
+.main_menu{
+  background-color: rgba(255, 255, 255, 0.990);
+  width: 100%;
+  left: 0;
+  text-align: center;
+  z-index: 100;
 }
 
+.nav_service_area{
+  color: #222;
+  text-align: end;
+  margin: 10px 0;
+  font-size: 14px;
+  letter-spacing: -0.8px;
+}
 
+.color_blue{
+  color: #46cfa7;
+}
+
+.nav_bar_logo {
+  display: inline-block;
+  position: relative;
+  top: 11px;
+  margin: -2px 74px 0 0;
+}
+
+.logo_small{
+  width: 80px;
+  transform: rotate(-2deg);
+}
+
+.nav_service_bar{
+  display: inline-block;
+  width: 1px;
+  height: 15px;
+  background-color: hsl(210, 6%, 82%);
+  margin: 0 9px;
+}
+
+.nav_bar_list{
+  display: inline-block;
+  max-width: 1240px;
+  padding: 10px 0 10px 0;
+  vertical-align: top;
+}
+
+.nav_bar_list .item{
+  display: inline-block;
+  margin: 10px 15px;
+  padding: 10px 0;
+  font-weight: 600;
+  font-size: 18px;
+  border-bottom: 4px solid transparent;
+  transition: 0.1s;
+}
+
+.nav_bar_list .item:hover{
+  border-bottom: 4px solid #ffcd32;
+
+}
+
+.nav_bar_icon {
+  display: inline-block;
+  margin: 0 0 0 40px;
+}
+
+.nav_icon {
+  width: 27px;
+  margin: 0 10px;
+}
+/* category */
+.category_content{
+
+}
+
+.category_header{
+  height: 300px;
+  margin-bottom: 50px;
+}
+
+.category_img{
+  background-image: url("../img/category_flower_w.png");
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center right;
+  background-color: #eeece8;
+}
+.category_table{
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 63px 60px 0;
+}
+.category_title{
+  font-size: 30px;
+  font-weight: 600;
+  margin: 20px 0;
+}
+.category_detail{
+  font-size: 18px;
+  line-height: 27px;
+  font-weight: 100;
+  letter-spacing: -.27px;
+  color: #222;
+}
+/* product 정렬 select */
+.product_array_box{
+  margin: 20px 10px;
+  text-align: right;
+
+}
+
+.product_array{
+  width: 90px;
+  height: 29px;
+  border: transparent;
+  font-size: 16px;
+}
+
+.product_array:focus{
+  outline: none;
+}
+
+.product_order_list{
+  font-size: 15px;
+}
+
+/* product list */
 
 #product_list {
   display: inline-block;
@@ -44,23 +186,26 @@ a:visited {
 
 }
 
-.product_img_box{
-  height: 264px;
-  width: 264px;
+.product_box > a{
+  display: inline-block;
   overflow: hidden;
+  width: 263px;
+  height: 263px;
 }
+
+
 
 .product_img {
   object-fit: fill;
   height: 264px;
   width: 263px;
   overflow: hidden;
-  transition: .2s ease;
+  transition: .4s;
 
 }
 
 .product_img:hover {
-  transform: scale(1.2);
+  transform: scale(1.1);
   overflow: hidden;
 }
 
@@ -159,6 +304,6 @@ dd {
 .sales_period_title{
   width: 100px;
 }
-.sales_period{  
+.sales_period{
   margin-right: 10px;
 }
