--- a/Project/src/main/webapp/admin_layout/css/admin.css
+++ b/Project/src/main/webapp/admin_layout/css/admin.css
@@ -21,146 +21,97 @@ li {
 a,
 a:active,
 a:visited {
-  color: black;
   text-decoration: none;
 }
 
 /* header */
 
-/* product list */
 
-#main_layout {
-  width: 1140px;
-  margin: 0 auto;
-  font-size: 0;      /*inline 요소간에 빈공간 제거*/
+/*admin_header*/
+
+header {
+    position: fixed;
+    top: 0;
+    height: 68px;
+    width: 100%;
+    background-color: white;
+    border-bottom: 1px solid #ffcd32;
+    z-index: 300;
+}
+
+.admin_header {
+	padding: 23px 82px;
+}
+
+.admin_header div {
+	display: inline-block;
+}
+
+
+.admin_header_title {
+    position: relative;
+    top: 2px;
+    font-size: 27px;
+    color: #a9a7a7;
+    margin-right: 11px;
+}
+
+.admin_header_subtitle {
+    position: relative;
+    top: 2px;
+    font-size: 20px;
+    color: #000;
+}
+
+.customerpage {
+	float: right;
+}
+
+.customerpage a {
+	color: #a9a7a7;
+	font-size: 18px;
+	margin-right: 10px;
+}
+
+.customerpage a:hover {
+	color: #ffcd32;
+}
+
+/*////////////////////////// 상품관리 /////////////////////////////*/
+
+/* 상품관리 목록 */
+
+.product_title_box {
+	margin: 0 10px 30px;
+    height: 60px;
+}
+
+.product_title {
+	position: relative;
+    top: 19px;
+    left: 24px;
+    font-size: 32px;
+}
+
+.product_title_box input {
+	float: right;
 }
 
 
 
-#product_list {
-  display: inline-block;
-  width: 25%;
-  padding: 0 10px;
-  font-size: 15px;
-  margin-bottom: 30px;
-
-}
-
-.product_img_box{
-  height: 264px;
-  width: 264px;
-  overflow: hidden;
-}
-
-.product_img {
-  object-fit: fill;
-  height: 264px;
-  width: 263px;
-  overflow: hidden;
-  transition: .2s ease;
-
-}
-
-.product_img:hover {
-  transform: scale(1.2);
-  overflow: hidden;
-}
-
-dd {
-  display: block;
-  height: 140px;
-  float: left;
-}
 
 
-.product_info_textbox {
-  display: block;
-  margin: 10px 0;
-  font-size: 17px;
-}
-
-/*admin product detail page*/
-.product_manage_box{
-  text-align: center;
-}
-
-.product_manage_layout {
-  font-size: 0;
-}
-
-.product_manage_layout li{
-  display: inline-block;
-  margin: 10px 15px;
-  text-align: center;
-}
-
-.product_manage_layout li label{
-  display: inline-block;
-  width: 85px;
-  height: 30px;
-  font-size: 15px;
-  text-align: left;
-  margin-right: 5px;
-}
-
-.product_manage_layout li input,
-.product_manage_layout li select{
-  font-size: 15px;
-  width: 200px;
-  height: 37px;
-}
-
-.product_manage_btnbox{
-  text-align: right;
-  padding: 10px 20px;
-}
-
-.btn_m{
-  width: 121px;
-  height: 39px;
-  font-size: 16px;
-  border-radius: 6px;
-  border: none;
-  margin: 10px 5px;
-  cursor: pointer;
-}
-
-.btn_yellow{
-  background-color: #ffcd32;
-}
-
-.btn_gray{
-  background-color: #ececec;
-}
 
 
-/* sales */
 
-.sales_layout1 {
-  background-color: bisque;
 
-}
 
-.sales_layout1 {
-  background-color: bisque;
-  width: 100%;
-  height: 100px;
-  font-size: 20px;
-}
 
-.sales_layout_detail{
-  display: block;
-  margin: 10px 10px;;
-}
 
-.sales_layout_detail td{
-  display: inline-block;
-  margin: 5px 10px;
-}
 
-.sales_period_title{
-  width: 100px;
-}
-.sales_period{  
-  margin-right: 10px;
-}
+
+
+
+
+
+
