--- a/Project/src/main/webapp/member/css/style.css
+++ b/Project/src/main/webapp/member/css/style.css
@@ -42,7 +42,7 @@ a:visited {
 
 #container {
   max-width: 1240px;
-  margin: 100px auto;
+  margin: 0 auto;
   padding: 0 60px;
 }
 
@@ -119,322 +119,160 @@ a:visited {
   margin: 0 10px;
 }
 
-
-/*
- * Made by Erik Terwan
- * 24th of November 2015
- * MIT License
- *
- *
- * If you are thinking of using this in
- * production code, beware of the browser
- * prefixes.
- */
-
-#admin_nav{
-    position: fixed;
-    z-index: 100;
-    font-family: 'Noto Sans KR',sans-serif,NanumGothic,'나눔고딕',Dotum,'돋움',Helvetica,"Apple SD Gothic Neo";
-	top: 60px;
-}
-
-#menuToggle
-{
-  display: block;
-  position: relative;
-  top: 57px;
-  left: 48px;
-  
-  z-index: 1;
-  
-  -webkit-user-select: none;
-  user-select: none;
-}
-
-#menuToggle a
-{
-  text-decoration: none;
-  color: #232323;
-  
-  transition: color 0.3s ease;
-}
-
-#menuToggle a:hover
-{
-  color: #ffcd32;
-}
-
-
-#menuToggle input
-{
-  display: block;
-  width: 40px;
-  height: 32px;
-  position: absolute;
-  top: -7px;
-  left: -5px;
-  
-  cursor: pointer;
-  
-  opacity: 0; /* hide this */
-  z-index: 2; /* and place it over the hamburger */
-  
-  -webkit-touch-callout: none;
-}
-
-/*
- * Just a quick hamburger
- */
-#menuToggle span
-{
-  display: block;
-  width: 33px;
-  height: 4px;
-  margin-bottom: 5px;
-  position: relative;
-  
-  background: #cdcdcd;
-  border-radius: 3px;
-  
-  z-index: 1;
-  
-  transform-origin: 4px 0px;
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
-              opacity 0.55s ease;
-}
-
-#menuToggle span:first-child
-{
-  transform-origin: 0% 0%;
-}
-
-#menuToggle span:nth-last-child(2)
-{
-  transform-origin: 0% 100%;
-}
-
-/* 
- * Transform all the slices of hamburger
- * into a crossmark.
- */
-#menuToggle input:checked ~ span
-{
-  opacity: 1;
-  transform: rotate(45deg) translate(-2px, -1px);
-  background: #232323;
-}
-
-/*
- * But let's hide the middle one.
- */
-#menuToggle input:checked ~ span:nth-last-child(3)
-{
-  opacity: 0;
-  transform: rotate(0deg) scale(0.2, 0.2);
-}
-
-/*
- * Ohyeah and the last one should go the other direction
- */
-#menuToggle input:checked ~ span:nth-last-child(2)
-{
-  transform: rotate(-45deg) translate(0, -1px);
-}
-
-/*
- * Make this absolute positioned
- * at the top left of the screen
- */
-#menu
-{
-  position: absolute;
-  width: 300px;
-  height: 101vh;
-  margin: -100px 0 0 -50px;
-  padding: 50px;
-  padding-top: 125px;
-  
-  background: #ededed;
-  list-style-type: none;
-  -webkit-font-smoothing: antialiased;
-  /* to stop flickering of text in safari */
-  
-  transform-origin: 0% 0%;
-  transform: translate(-100%, 0);
-  
-  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
-}
-
-#menu li
-{
-  padding: 10px 0;
-  font-size: 22px;
-}
-
-/*
- * And let's slide it in from the left
- */
-#menuToggle input:checked ~ ul
-{
-  transform: none;
-}
-
-
 /*item_manage > itemManageList.jsp */
 /* category */
 
 .category_header{
-	height: 300px;
-	margin-bottom: 50px;
+  height: 300px;
+  margin-bottom: 50px;
 }
 
 .category_img{
-	background-image: url(../img/category_flower_w.png);
-	height: 300px;
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: center right;
-	background-color: #eeece8;
+  background-image: url(../img/category_flower_w.png);
+  height: 300px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center right;
+  background-color: #eeece8;
 }
 .category_table{
-	max-width: 1240px;
-	margin: 0 auto;
-	padding: 63px 60px 0;
+  max-width: 1240px;
+  margin: 0 auto;
+  padding: 63px 60px 0;
 }
 .category_title{
-	font-size: 30px;
-	font-weight: 600;
-	margin: 20px 0;
+  font-size: 30px;
+  font-weight: 600;
+  margin: 20px 0;
 }
 .category_detail{
-	font-size: 18px;
-	line-height: 27px;
-	font-weight: 100;
-	letter-spacing: -.27px;
-	color: #222;
+  font-size: 18px;
+  line-height: 27px;
+  font-weight: 100;
+  letter-spacing: -.27px;
+  color: #222;
 }
 /* product 정렬 select */
 .product_array_box{
-	margin: 20px 10px;
-	text-align: right;
+  margin: 20px 10px;
+  text-align: right;
+
 }
 
 .product_array{
-	width: 90px;
-	height: 29px;
-	border: transparent;
-	font-size: 16px;
+  width: 90px;
+  height: 29px;
+  border: transparent;
+  font-size: 16px;
 }
 
 .product_array:focus{
-	tline: none;
+  outline: none;
 }
 
 .product_order_list{
-	t-size: 15px;
+  font-size: 15px;
 }
 
 /* product list */
 
 #product_list {
-	display: inline-block;
-	width: 25%;
-	padding: 0 10px;
-	font-size: 15px;
-	margin-bottom: 30px;
+  display: inline-block;
+  width: 25%;
+  padding: 0 10px;
+  font-size: 15px;
+  margin-bottom: 30px;
+
 }
 
 .product_box > a{
-	display: inline-block;
-	overflow: hidden;
-	width: 263px;
-	height: 263px;
+  display: inline-block;
+  overflow: hidden;
+  width: 263px;
+  height: 263px;
 }
 
 
 
 .product_img {
-	object-fit: fill;
-	height: 264px;
-	width: 263px;
-	overflow: hidden;
-	transition: .4s;
+  object-fit: fill;
+  height: 264px;
+  width: 263px;
+  overflow: hidden;
+  transition: .4s;
+
 }
 
 .product_img:hover {
-	transform: scale(1.1);
-	overflow: hidden;
+  transform: scale(1.1);
+  overflow: hidden;
 }
 
 dd {
-	display: block;
-	height: 140px;
-	float: left;
+  display: block;
+  height: 140px;
+  float: left;
 }
 
 
 .product_info_textbox {
-	display: block;
-	margin: 10px 0;
-	font-size: 17px;
+  display: block;
+  margin: 10px 0;
+  font-size: 17px;
 }
 
 /*admin product detail page*/
 .product_manage_box{
-	xt-align: center;
+  text-align: center;
 }
 
 .product_manage_layout {
-	t-size: 0;
+  font-size: 0;
 }
 
 .product_manage_layout li{
-	display: inline-block;
-	margin: 10px 15px;
-	text-align: center;
+  display: inline-block;
+  margin: 10px 15px;
+  text-align: center;
 }
 
 .product_manage_layout li label{
-	display: inline-block;
-	width: 85px;
-	height: 30px;
-	font-size: 15px;
-	text-align: left;
-	margin-right: 5px;
+  display: inline-block;
+  width: 85px;
+  height: 30px;
+  font-size: 15px;
+  text-align: left;
+  margin-right: 5px;
 }
 
 .product_manage_layout li input,
 .product_manage_layout li select{
-	font-size: 15px;
-	width: 200px;
-	height: 37px;
+  font-size: 15px;
+  width: 200px;
+  height: 37px;
 }
 
 .product_manage_btnbox{
-	text-align: right;
-	padding: 10px 20px;
+  text-align: right;
+  padding: 10px 20px;
 }
 
 .btn_m{
-	width: 121px;
-	height: 39px;
-	font-size: 16px;
-	border-radius: 6px;
-	border: none;
-	margin: 10px 5px;
-	cursor: pointer;
+  width: 121px;
+  height: 39px;
+  font-size: 16px;
+  border-radius: 6px;
+  border: none;
+  margin: 10px 5px;
+  cursor: pointer;
 }
 
-
-
 .btn_yellow{
-	background-color: #ffcd32;
+  background-color: #ffcd32;
 }
 
 .btn_gray{
-	background-color: #ececec;
+  background-color: #ececec;
 }
 
 
@@ -572,8 +410,7 @@ footer{
   display: inline-block;
 }
 
-.customer_info_btns a {
-  display: inline-block;
+.customer_info_btns button {
   font-size: 13px;
   background-color: #222;
   width: 115px;
@@ -582,7 +419,6 @@ footer{
   border: 1.5px solid #524e4e;
   border-radius: 50px;
   margin-right: 10px;
-  padding: 9px 17px;
 }
 .footer_right{
   display: inline-block;
