제품 관리 페이지 수정
update, delete, detail 페이지 수정 및 추가

--- a/Project/src/main/webapp/admin_layout/css/style.css
+++ b/Project/src/main/webapp/admin_layout/css/style.css
@@ -383,12 +383,9 @@ dd {
 
 /*admin product detail page*/
 .product_manage_box{
-	xt-align: center;
+	text-align: center;
 }
 
-.product_manage_layout {
-	t-size: 0;
-}
 
 .product_manage_layout li{
 	display: inline-block;
@@ -414,7 +411,7 @@ dd {
 
 .product_manage_btnbox{
 	text-align: right;
-	padding: 10px 20px;
+	padding: 10px 86px;
 }
 
 .btn_m{
