--- a/src/main/webapp/css/mypage_memberPoint.css
+++ b/src/main/webapp/css/mypage_memberPoint.css
@@ -188,9 +188,10 @@ table {
 }
 
 .memberPoint_table {
-	width: 100%;
-	height: 100%;
+	width: 761.6px;
+	height: 107px;
 	display: block;
+	
 }
 
 caption {
@@ -234,13 +235,12 @@ tr {
 }
 
 .memberPoint_div6, 
-.memberPoint_table tr th:first-of-type,
-.memberPoint_table tr td:first-of-type {
+.memberPoint_table tr th,
+.memberPoint_table tr td {
 	border-left: none;
 }
 
 .memberPoint_div6,
-.memberPoint_table thead td,
 .memberPoint_table thead th {
 	padding: 18px 10px;
 	background-color: #f7f7f7;
@@ -260,13 +260,12 @@ tr {
 th {
     display: table-cell;
     vertical-align: inherit;
-    width: 152.31px;
+    width: 160px;
     height: 56px;
 }
 
 .memberPoint_span2 {
-	width: 25.35px;
-	height: 20.8px;
+	
 }
 
 tbody {
@@ -283,9 +282,16 @@ tbody {
 	border-bottom: #ececec 1px solid;
 }
 
+td {
+	width: 152.31px;
+	height: 50.5px;
+}
 
+.memberPoint_span3 {
+	color: #46cfa7;
+}
 
-
-
-
+.memberPoint_span4 {
+	font-weight: 100;
+}
 
