--- a/src/main/webapp/css/subscription.css
+++ b/src/main/webapp/css/subscription.css
@@ -165,7 +165,7 @@ li {
 
 dl {
     display: block;
-    margin-block-start: 1em;
+    margin-block-start: 4em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
@@ -202,17 +202,17 @@ a {
     outline-width: 1px;
 }
 
-a:-webkit-any-link {
+/* a:-webkit-any-link {
     color: -webkit-link;
     cursor: pointer;
-}
+} */
 
 .category_product_detail .detail .thumnail .link>img {
     display: block;
     width: 100%;
 }
 
-/* 이거키면 마이페이지, 장바구니 이미지 위로올라감...  */
+/* 이거키면 마이페이지, 장바구니 이미지 위로올라감   */
 /* img {
     vertical-align: top;
 } */
@@ -443,6 +443,173 @@ fieldset, img {
 .subscription_how_to .how_step+.how_tip {
     margin-top: 80px;
 }
+
+.subscription_how_to .how_step .list .ico.s1 {
+    background-image: url(../img/subscription/kukka.png);
+    background-position: -802px -58px;
+    width: 180px;
+    height: 180px;
+    background-size: 1252px 845px;
+}
+
+.subscription_how_to .how_step .list .ico {
+    float: none;
+    margin-left: 0;
+    margin: 0 auto;
+    display: block;
+}
+
+.subscription_how_to .how_step .list .ico.s1+.step {
+    padding-top: 30px;
+}
+
+.subscription_how_to .how_step .list .step {
+    font-weight: 500;
+    color: #ffcd32;
+}
+
+.subscription_how_to .how_step .list .desc, .subscription_how_to .how_step .list .step {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -.24px;
+    text-align: center;
+}
+
+.subscription_how_to .how_step .list .desc, .subscription_how_to .how_step .list .step {
+    display: block;
+}
+
+.subscription_how_to .how_step .list .desc, .subscription_how_to .how_step .list .step {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: -.24px;
+    text-align: center;
+    display: block;
+}
+
+
+.subscription_how_to .how_step .list .desc .m, .subscription_how_to .how_step .list .step .m {
+    display: none;
+}
+
+.subscription_how_to .how_step .list .desc>b, .subscription_how_to .how_step .list .step>b {
+    font-weight: 700;
+}
+
+.subscription_how_to .how_step .list .desc .pc, .subscription_how_to .how_step .list .step .pc {
+    display: block;
+}
+
+
+.subscription_how_to .how_step .list:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.subscription_how_to .how_step .list+.list:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -12px;
+    margin-left: 0;
+    margin-top: 0;
+    background-image: url(../img/subscription/kukka.png);
+    background-position: -1182px -58px;
+    width: 24px;
+    height: 180px;
+    background-size: 1252px 845px;
+    display: block;
+}
+
+.subscription_how_to .how_step .list .ico.s2 {
+    background-image: url(../img/subscription/kukka.png);
+    background-position: -992px -58px;
+    width: 180px;
+    height: 180px;
+    background-size: 1252px 845px;
+}
+
+.subscription_how_to .how_step .list .ico.s3 {
+    background-image: url(../img/subscription/kukka.png);
+    background-position: -612px -58px;
+    width: 180px;
+    height: 180px;
+    background-size: 1252px 845px;
+}
+
+.subscription_how_to .how_step .list .ico.s4 {
+    background-image: url(../img/subscription/kukka.png);
+    background-position: -612px -248px;
+    width: 180px;
+    height: 180px;
+    background-size: 1252px 845px;
+}
+
+.subscription_how_to .how_step .list .ico.s2+.step {
+    padding-top: 30px;
+}
+
+.subscription_how_to .how_step .list .ico.s3+.step {
+    padding-top: 30px;
+}
+
+.subscription_how_to .how_step .list .ico.s4+.step {
+    padding-top: 30px;
+}
+
+.subscription_how_to .how_step:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.subscription_how_to .how_step+.how_tip {
+    margin-top: 80px;
+}
+
+.subscription_how_to .how_tip {
+    clear: both;
+    padding: 30px;
+    text-align: center;
+    background-color: #f7f7f7;
+}
+
+p {
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+.subscription_how_to .how_tip .line {
+	position: relative;
+    display: inline-block;
+    padding-left: 18px;
+    font-size: 14px;
+    line-height: 21px;
+    font-weight: 300;
+    letter-spacing: -.21px;
+    color: #222;
+}
+
+.subscription_how_to .how_tip .line:before {
+    content: '';
+    background-image: url(../img/subscription/kukka.png);
+    background-size: 626px 422.5px;
+    width: 13px;
+    height: 13px;
+    background-position: -64px -387.5px;
+    position: absolute;
+    top: 4px;
+    left: 0;
+}
+
+
+
+
+
 
 
 
