--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,108 +1,135 @@
 @charset "UTF-8";
-/* 로그인 */
-*{
-margin: 0px auto;
-text-align: center;
 
+*, *::before, *::after {
+	padding: 0;
+	margin: 0;
+	box-sizing: inherit;
 }
-#login{
-margin: 30px;
+
+body {
+	box-sizing: border-box;
+}
+
+li {
+	list-style: none;
+	text-decoration: none;
+	display: list-item;
+    text-align: -webkit-match-parent;
+}
+
+a, a:active, a:visited {
+	color: black;
+	text-decoration: none;
+}
+img{
+	width: 30px;
+}
+
+/* 로그인 */
+.login_all {
+	margin: 0px auto;
+	text-align: center;
+	width: 100%;
+}
+
+#login {
+	margin: 30px;
 }
 
 #log_img {
-  width: 50px;
-  height: 50px;
-  object-fit: cover;
-  margin: 10px;
+	width: 50px;
+	height: 50px;
+	/*   object-fit: cover; */
+	margin: 10px;
 }
 
-.loginbutton{
-background: #FFE146;
-border: none;
-border-radius: 10px;
-width: 300px;
-height: 50px;
-margin: 50px;
-font-weight: 700;
-font-size: large;
+.loginbutton {
+	background: #FFE146;
+	border: none;
+	border-radius: 10px;
+	width: 300px;
+	height: 50px;
+	margin: 50px;
+	font-weight: 700;
+	font-size: large;
 }
 
-.joinbutton{
-background: #79FFCE;
-border: none;
-border-radius: 10px;
-width: 300px;
-height: 50px;
-margin: 20px;
-font-weight: 700;
-font-size: large;
+.joinbutton {
+	background: #79FFCE;
+	border: none;
+	border-radius: 10px;
+	width: 300px;
+	height: 50px;
+	margin: 20px;
+	font-weight: 700;
+	font-size: large;
 }
 
-#p1{
-color: #6FFFC4;
-font-weight: 700;
+#p1 {
+	color: #6FFFC4;
+	font-weight: 700;
 }
 
-#inp{
-border: 1px solid #969696;
-border-radius: 10px;
-width: 300px;
-height: 50px;
-margin: 10px;
-text-align: left;
-font-size: medium;
-}
-#fin{
-width: 300px;
-height: 50px;
-margin: 10px;
-padding: 10px;
-text-decoration: none;
-color: #969696;
-font-weight: 700;
-border: none;
+#inp {
+	border: 1px solid #969696;
+	border-radius: 10px;
+	width: 300px;
+	height: 50px;
+	margin: 10px;
+	text-align: left;
+	font-size: medium;
 }
 
-#sns, #now{
-margin-top: 20px;
-margin-bottom: 10px;
-font-weight: 700;
-font-size: small;
+#fin {
+	width: 300px;
+	height: 50px;
+	margin: 10px;
+	padding: 10px;
+	text-decoration: none;
+	color: #969696;
+	font-weight: 700;
+	border: none;
 }
 
-#checklogin{
-
-font-weight: 300;
-text-align:left;
+#sns, #now {
+	margin-top: 20px;
+	margin-bottom: 10px;
+	font-weight: 700;
+	font-size: small;
 }
-#nonmember{
-font-weight: 700;
-font-size: medium;
-margin-bottom: 10px;
+
+#checklogin {
+	font-weight: 300;
+	text-align: left;
+}
+
+#nonmember {
+	font-weight: 700;
+	font-size: medium;
+	margin-bottom: 10px;
 }
 /* 아이디찾기 */
-
-#joinnumber{
-font-weight: 500;
-font-size: medium;
-margin: 10px;
-padding: 10px;
+#joinnumber {
+	font-weight: 500;
+	font-size: medium;
+	margin: 10px;
+	padding: 10px;
 }
 
-#phone{
-width: 90px;
-height: 40px;
-border: 1px solid #969696;
-border-radius: 10px;
-margin-top: 30px;
-margin-bottom: 30px;
+#phone {
+	width: 90px;
+	height: 40px;
+	border: 1px solid #969696;
+	border-radius: 10px;
+	margin-top: 30px;
+	margin-bottom: 30px;
 }
 
-#call{
-font-weight: 300;
-font-size: small;
+#call {
+	font-weight: 300;
+	font-size: small;
 }
 
-h1{
+h1 {
 	margin-top: 50px;
 }
