--- a/src/main/webapp/css/itemDetail.css
+++ b/src/main/webapp/css/itemDetail.css
@@ -79,34 +79,47 @@
 	margin: 18px 0;
 }
 
-label {
+.label_name {
 	font-size: 16px;
 	width: 160px;
 	float: left;
 	text-align: left;
 }
-.label {
+.label_div {
 	height: 40px;
+}
+
+.add_letter {
+	font-size: 13px;
 }
 
 .extra {
 	margin: 5px 0;
 	padding: 20px 15px;
-	background-color: #eeeeee;
+	background-color: #f6f6f6;
 	border-radius: 5px;
 }
 
-#amount, .letterPrice {
+.extra_right {
 	text-align: right;
 }
 
+#amount, .letterPrice { /* 여기 오른쪽으로 float주면 div폭이 깨짐 ㅠㅠ */
+	font-size: 16px;
+	font-weight: 400;
+}
+
 .free {
-	float: right;
-	font-size: 12px;
+	text-align: right;
+	margin: 20px 0 10px 441px;
+	font-size: 10px;
+	padding: 2px 5px;
+	background-color: #eeeeee;
+	border-radius: 10px;
 }
 
 .total {
-	float: right;
+	text-align: right;
 	font-size: 15px;
 }
 
