--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -13,23 +13,20 @@ body {
 li {
 	list-style: none;
 	text-decoration: none;
-	display: list-item;
-    text-align: -webkit-match-parent;
 }
 
 a, a:active, a:visited {
 	color: black;
 	text-decoration: none;
 }
-img{
-	width: 30px;
-}
+
 
 /* 로그인 */
 .login_all {
 	margin: 0px auto;
 	text-align: center;
 	width: 100%;
+	
 }
 
 #login {
@@ -39,7 +36,7 @@ img{
 #log_img {
 	width: 50px;
 	height: 50px;
-	/*   object-fit: cover; */
+	  object-fit: cover;
 	margin: 10px;
 }
 
@@ -114,6 +111,10 @@ img{
 	font-size: medium;
 	margin: 10px;
 	padding: 10px;
+}
+.find{
+	margin: 0px auto;
+	text-align: center; 
 }
 
 #phone {
