--- a/src/main/webapp/css/itemDetail.css
+++ b/src/main/webapp/css/itemDetail.css
@@ -205,7 +205,7 @@
 	font-weight: 600;
 }
 
-.cartbuy, .nowbuy {
+.cartbuy, .nowbuy, .subbuy {
 	width: 238px;
 	height: 50px;
 	margin: 25px 0;
@@ -215,7 +215,7 @@
 	cursor: pointer;
 }
 
-.nowbuy {
+.nowbuy, .subbuy {
 	margin-left: 4px;
 	background-color: #ffd324;
 }
@@ -224,9 +224,6 @@
 	margin-right: 4px;
 	background-color: #dddddd;
 }
-
-
-
 
 
 
