--- a/src/main/webapp/css/join.css
+++ b/src/main/webapp/css/join.css
@@ -1,36 +1,33 @@
 @charset "UTF-8";
 
-		*::before,
-		*::after {
-		  padding: 0;
-		  margin: 0;
-		  box-sizing: inherit;
+		.title {
+		    height: auto;
+		    padding: 40px 0;
+		    border-bottom: 50px;
+		    font-size: 30px;
+		    font-weight: 600;
+		    line-height: 45px;
+		    color: #333;
+		    text-align: center;
 		}
 		
-		body {
-		  box-sizing: border-box;
+		.joinform {
+			display: block;
+			width: 1120px;
+			margin: 0 auto;
+			padding: 0 60px;			
 		}
-
-		.title {
-			font-size: 1.0em;
-			font-weight: 600;
-			margin-bottom: 50px;
-			margin-top: 20px;
+		
+		.joinform_container {
+		    max-width: 1240px;
+		    margin: 0 auto;
+		    padding: 0 60px;
 		}
 		
 		.topForm {
-			margin-top: 25px;
-			display: inline-block;
-			width: 80%;
-			text-align: center;
-		}	
-		
-		.joinForm {
-			display: inline-block;
-			box-sizing: content-box;	
-			width: 70%;
-			line-height: 25px;
-		  	text-align: center;
+		    max-width: 620px;
+		    margin: 0 auto;
+		    padding: 0 0 40px;
 		}
 
 		.bottomForm {
@@ -59,26 +56,38 @@
 			font-size: 12px;
 			color: #FF0000;
 		}
-				
+			
 		.leftLabel {
 			float: left;
 			width: 120px;
 			text-align: left;
-		 	font-size: 15px;
-		 	font-weight: 700;
-		 	letter-spacing: -.67px;		 	
+		 	font-size: 16px;
+		 	font-weight: 600;
+		 	letter-spacing: -.67px;
+		 	padding-top: 10px; 	
 		 	color: #333;
-		 	display: inline-block;
-		 	clear: left;
 		}		
 
 		.textBox {
-			height: 44px;
-			width: 300px;
-			border: 1px solid #eaeaea;
-			border-radius: 5px;	
-			font-size: 14px;
-			display: inline-block;
+		    padding: 0;
+		    margin: 0;
+		    border: none;
+		    background: 0 0;
+		    outline: 0;
+		    display: block;
+		    width: 300px;
+		    height: 44px;
+		    margin-right: 110px;
+		    padding: 0 20px;
+		    -webkit-border-radius: 5px;
+		    -moz-border-radius: 5px;
+		    border-radius: 5px;
+		    border: #d3d3d3 1px solid;
+		    font-size: 14px;
+		    line-height: 44px;
+		    font-weight: 300;
+		    letter-spacing: -.21px;
+		    color: #222;
 		}
 		
 		.textBox2 {
