--- a/src/main/webapp/css/mypage.css
+++ b/src/main/webapp/css/mypage.css
@@ -1,25 +1,30 @@
-@charset "UTF-8";
-
-*, *::before, *::after {
-	padding: 0;
-	margin: 0;
-	box-sizing: inherit;
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
 }
 
 body {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 li {
-	list-style: none;
-	text-decoration: none;
+  list-style: none;
+  text-decoration: none;
 }
 
-a, a:active, a:visited {
-	color: black;
-	text-decoration: none;
+a,
+a:active,
+a:visited {
+  color: black;
+  text-decoration: none;
 }
 
+a, button {
+  cursor: pointer;
+}
 /* mypage_banner_list */
 .mypage_all {
 	width: 100%;
@@ -28,20 +33,20 @@ a, a:active, a:visited {
 	/* 	float: right; */
 }
 
-.mypage_banner {
-	/* 	width: 1120px; */
-	height: 250px;
-}
-
 .mypage_top {
 	background: #FFD228;
 	background-size: 100%;
 }
 
+.mypage_banner {
+	height: 250px;
+	margin-left: 120px;
+}
+
 #mypage_user_name {
-	font-size: xx-large;
-	font-weight: 600;
-	margin-left: 150px;
+	font-size: 25px;
+	font-weight: 500;
+	margin-left: 200px;
 	margin-top: 20px;
 	padding: 50px;
 	line-height: 50px;
@@ -59,7 +64,7 @@ strong {
 	background-color: white;
 	border-radius: 5px;
 	margin-top: 70px;
-	margin-right: 220px;
+	margin-right: 400px;
 }
 
 #mypage_top_right_i {
@@ -76,31 +81,40 @@ strong {
 	display: inline-block;
 	vertical-align: baseline;
 	text-align: center;
-	margin-left: 120px;
+	margin-left: 80px;
 }
 
 #mypage_top_dt {
 	float: left;
-	line-height: 1.5;
-	padding: 20px;
 	font-size: large;
 	font-weight: 500;
+	margin-top: 20px;
+	margin-left: 50px;
 }
 
 #mypage_top_dd {
 	color: #6FFFC4;
-	line-height: 1.5;
 	font-size: x-large;
 	font-weight: 900;
+	clear: both;
+	margin-top: 20px;
+	margin-left: 50px; 
+	
+}
+
+.mypage_left_section{
+ margin-bottom: 80px;	
 }
 
 .mypage_left_menu_section {
 	float: left;
+	height: 800px;
+	margin-bottom: 50px;
 }
 
 #mypage_left_menu {
-	margin-left: 200px;
-	margin-top: 50px;
+	margin-left: 380px;
+	margin-top: 30px;
 }
 
 #mypage_left_title {
@@ -125,15 +139,15 @@ strong {
 /* mypage_main */
 .mypage_center_c {
 	float: right;
-	margin-right: 220px;
-	margin-top: 50px;
+	margin-right: 400px;
+	margin-top: 30px;
 	background-color: #fff9ee;
 	text-align: 5px;
 }
 
 #mypage_center_i {
 	display: inline-block;
-	height: 250px;
+	height: 230px;
 	width: 800px;
 }
 
@@ -164,24 +178,24 @@ strong {
 	padding-bottom: 20px;
 	line-height: 1.5;
 	font-size: large;;
-	font-weight: 900;
+	font-weight: 800;
 	color: #66F8F0;
 }
 
 #mypage_center_dd {
 	line-height: 1.5;
 	font-size: large;;
-	font-weight: 900;
+	font-weight: 800;
 }
 
 .mypage_main {
 	display: block;
 	float: right;
-	margin-right: 220px;
+	margin-right: 400px;
 	background-image: url("../img/mypage_main.png");
 	width: 800px;
-	height: 300px;
-	margin-top: 50px;
+	height: 320px;
+	margin-top: 30px;
 }
 
 #mypage_main_subject {
@@ -193,164 +207,45 @@ strong {
 
 #mypage_main_dl {
 	margin: 20px;
+	margin-top: 50px;
 }
 
 #mypage_main_dt {
-	margin: 20px;
+/* 	margin: 20px; */
 	font-size: mediuml;
 	font-weight: 900;
 	color: #FFD228;
+	margin: 10px;
+	clear: both;
+	margin-bottom: 10px; 
 }
 
 #mypage_main_dd_one {
 	font-size: large;
 	font-weight: 500;
 	margin: 10px;
-	margin-left: 20px;
+	clear: both;
+	margin-bottom: 30px;
 }
 
 #mypage_main_dd_two {
 	font-size: x-large;
 	font-weight: 900;
 	margin: 10px;
-	margin-left: 20px;
+	clear: both;
+	margin-bottom: 50px;
+	
 }
 
 
 #mypage_order_btn {
 	background-color: #FFD228;
 	border-radius: 150px;
-	width: 180px;
+	width: 150px;
 	height: 50px;
 	text-align: center;
 	border: none;
-	margin-top: 30px;
+	margin-bottom: 50px;
+	margin-left: 10px;
 }
 
-/* qnainsert */
-.qna_insert_all{
-	margin-right: 220px;
-	width: 800px;
-	float: right;
-	margin-top: 50px;
-}
-#qna_insert_i{
-	
-}
-
-#qna_insert_title{
-	font-weight: 700;
-	font-size: x-large;
-	color: black;
-/* 	padding: 50px; */
-	float: left;
-	width: 800px;
-	margin-bottom: 30px;
-	
-}
-#qna_insert_title_spen{
-	float: right;
-	color: #969696;
-	font-size: medium;
-	margin-top: 10px;
-}
-#qna_insert_th{
-	display:inline-block;
-   	width: 800px;
-    font-size: 18px;
-    line-height: 25px;
-    font-weight: 800;
-	margin-bottom: 30px;
-}
-#qna_insert_order_td{
-	width: 450px;
-	height: 50px;
-	border-radius: 5px;
-	margin-left: 90px;
-	border: 1px solid #969696; 
-}
-
-#qna_insert_order_btn{
-	background-color: #969696;
-	width: 90px;
-	height: 50px;
-	margin-left: 40px;
-	border-radius: 5px;
-	border: none;
-	float: right;
-	color: white;
-	font-weight: 500;
-	font-size: 14px;	
-	
-}
-
-#qna_insert_subject_td{
-	width: 585px;
-	height: 50px;
-	border-radius: 5px;
-	margin-left: 100px;
-	font-size:medium;
-	border: 1px solid #969696; 
-	margin-left: 150px;
-	float: right;	
-}
-
-#qna_insert_contents_td{
-	float: right;	
-	border-radius: 5px;
-	font-size:medium;
-	width: 585px;
-}
-#qna_insert_p{
-	color: #969696; 
-	text-align: center;
-	margin-left: 120px;
-}
-#qna_insert_ul{
-	margin-bottom: 10px;
-}
-#qna_insert_li{
-	width: 400px;
-	height: 50px;
-	border-radius: 5px;
-	font-size:medium;
-	border: 1px solid #969696; 
-	margin-left: 210px;
-	margin-bottom: 5px;
-}
-
-.input-file-button{
-  padding: 15px 30px;
-  background-color:#969696;
-  border-radius: 5px;
-  color: white;
-  cursor: pointer;
-  float: right;
- 
-
-}
-#qna_insert_li_inp{
-	position: absolute; 
-	width: 1px; 
-	height: 1px; 
-	padding: 0; 
-	margin: -1px; 
-	overflow: hidden; 
-	clip:rect(0,0,0,0);
-	border: 0;
-}
-
-#qna_insert_p2{
-	margin-left: 200px;	
-	color: #969696;
-}
-#qna_insert_submit{
-	background-color: #FFD228;
-	border-radius: 10px;
-	width: 400px;
-	height: 50px;
-	text-align: center;
-	border: none;
-	margin-top: 30px;
-	margin-left: 200px;
-}
