--- a/src/main/webapp/css/login.css
+++ b/src/main/webapp/css/login.css
@@ -1,26 +1,30 @@
-@charset "UTF-8";
-
-*, *::before, *::after {
-	padding: 0;
-	margin: 0;
-	box-sizing: inherit;
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
 }
 
 body {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 li {
-	list-style: none;
-	text-decoration: none;
+  list-style: none;
+  text-decoration: none;
 }
 
-a, a:active, a:visited {
-	color: black;
-	text-decoration: none;
+a,
+a:active,
+a:visited {
+  color: black;
+  text-decoration: none;
 }
 
-
+a, button {
+  cursor: pointer;
+}
 /* 로그인 */
 .login_all {
 	margin: 0px auto;
