--- a/src/main/webapp/css/join.css
+++ b/src/main/webapp/css/join.css
@@ -44,43 +44,37 @@
 			margin-left: 10px;
 			margin-top: 30px;
 			line-height: 30px;
-		}
-		
-		.row {
-			margin: 30px;
-			font-size: 1.8em;
-			vertical-align: middle;
-		}
+		}		
 		
 		.checkMessage { 
 			font-size: 12px;
 			color: #FF0000;
 		}
 			
-		.leftLabel {
-			float: left;
-			width: 120px;
-			text-align: left;
-		 	font-size: 16px;
-		 	font-weight: 600;
-		 	letter-spacing: -.67px;
-		 	padding-top: 10px; 	
-		 	color: #333;
-		}		
+		.join_name {
+		    float: left;
+		    width: 120px;
+		    padding-top: 10px;
+		    font-size: 16px;
+		    line-height: 24px;
+		    font-weight: 300;
+		    letter-spacing: -.24px;
+		    color: #222;
+		}
+
+		.join_input {
+			position: relative;
+		    display: block;
+		}
 
 		.textBox {
-		    padding: 0;
 		    margin: 0;
 		    border: none;
-		    background: 0 0;
-		    outline: 0;
 		    display: block;
 		    width: 300px;
 		    height: 44px;
 		    margin-right: 110px;
 		    padding: 0 20px;
-		    -webkit-border-radius: 5px;
-		    -moz-border-radius: 5px;
 		    border-radius: 5px;
 		    border: #d3d3d3 1px solid;
 		    font-size: 14px;
@@ -88,6 +82,7 @@
 		    font-weight: 300;
 		    letter-spacing: -.21px;
 		    color: #222;
+		    float: left;
 		}
 		
 		.textBox2 {
@@ -101,17 +96,18 @@
 		
 		.btn {
 			width: 120px;
-			height: 44px;
-			margin-left: 10px;
+			height: 39px;
 			border: none;
 			border-radius: 5px;
-			color: #878787;
+			color: #787878;
 			font-weight: bold;
-			font-size: 14px;
-			cursor: pointer;
-		}
-		
-		
+			font-size: 16px;
+			cursor: pointer;	
+  			letter-spacing: -.24px;
+    		font-weight: 300;
+    		float: left;
+			}
+
 		.btn:hover {
 			color: #FFFFFF;
 			background-color: #000000;
